use_cases/dynamic_cases/v1.0.1/slpf/UpdatedCases.md
# Updated Use Cases

  - Changes made for Language Spec compliance

## SLPF Use Cases

### Bad Commands

| File | Changes | Reason | Source | Note |
| ---- | ------- | ------ | ------ | ---- |
| N/A  |         |        |        |      |

### Good Commands

| File                                      | Changes | Reason | Source                                                   | Note |
| ----------------------------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| slpf\_example\_allow\_ipv6connection.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_delete\_rulenumber.json    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_deny\_ipv4connection.json  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_deny\_ipv6connection.json  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_deny\_ipv6net.json         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_update\_file.json          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Bad Responses

| File | Changes | Reason | Source                                                   | Note |
| ---- | ------- | ------ | -------------------------------------------------------- | ---- |
| N/A  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Responses

| File                                                | Changes | Reason | Source                                                   | Note |
| --------------------------------------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| results\_slpf\_empty.json                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_query\_features\_pairs\_example.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| slpf\_example\_rule\_number.json                    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
